--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -195,6 +195,7 @@
     <string name="home_self_check_rinse_second_text">冲水</string>
     <string name="home_self_check_rinse_third_text">按钮</string>
     <string name="home_self_check_wait_rinse">请稍等...</string>
+    <string name="home_self_check_countdown_text">洗机中...</string>
     <string name="home_self_check_boiler_heating">咖啡锅炉加热中…</string>
     <string name="home_self_check_steam_heating">蒸汽锅炉加热中…</string>
     <string name="home_release_steam_description">蒸汽锅炉蒸汽需要释放。</string>
