--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -203,6 +203,7 @@
     <string name="home_self_check_rinse_second_text">Rinse</string>
     <string name="home_self_check_rinse_third_text">button</string>
     <string name="home_self_check_wait_rinse">Please Wait...</string>
+    <string name="home_self_check_countdown_text">Washing Machine is Processing...</string>
     <string name="home_self_check_boiler_heating">Coffee boiler heating…</string>
     <string name="home_self_check_steam_heating">Steam boiler heating…</string>
     <string name="home_release_steam_description">Air in steam boiler has to be released.</string>
