--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -391,6 +391,7 @@
     <string name="bean_grinder_finer">调细</string>
     <string name="bean_grinder_coarser">调粗</string>
 
+    <string name="bean_etc_settings_previous">上一步</string>
     <string name="machine_test_coffee_inputs">咖啡输入测试</string>
     <string name="machine_test_coffee_output">咖啡输出测试</string>
     <string name="machine_test_steam_inputs">蒸汽输入状态</string>
@@ -610,5 +611,6 @@
     <string name="display_color_purple">紫色</string>
     <string name="home_wash_machine_title">洗机</string>
     <string name="home_lack_left_wash_pill_content">请投入左边洗机丸后点击确认继续</string>
+    <string name="bean_etc_settings_next">下一步</string>
 
 </resources>
