etc设置页面第二页

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -439,6 +439,8 @@
     <string name="bean_etc_settings_1_rinse_rate">Rinse Rate</string>
     <string name="bean_etc_settings_1_notice">If you replace parts or perform maintenance on the machine, it is recommended to dynamically measure the flow rate of the system and the orifice.</string>
     <string name="bean_etc_settings_1_flow">System Flow</string>
+    <string name="bean_etc_settings_2_front_bean_notice">Please select the product for
+        proofreading(front bean hopper)</string>
 
     <string name="machine_test_coffee_inputs">Coffee Inputs Test</string>
     <string name="machine_test_coffee_output">Coffee Outputs Test</string>
