--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -444,6 +444,8 @@
     <string name="bean_etc_settings_1_flow">System Flow</string>
     <string name="bean_etc_settings_2_front_bean_notice">Please select the product for
         proofreading(front bean hopper)</string>
+    <string name="bean_etc_settings_3_extraction_time">Extraction time</string>
+    <string name="bean_etc_settings_3_extraction_notice">Please set extraction time</string>
 
     <string name="machine_test_coffee_inputs">Coffee Inputs Test</string>
     <string name="machine_test_coffee_output">Coffee Outputs Test</string>
