--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -398,6 +398,10 @@
     <string name="bean_etc_settings_2_front_bean_notice">请选择用来校对的产品</string>
     <string name="bean_etc_settings_3_extraction_time">萃取时间</string>
     <string name="bean_etc_settings_3_extraction_notice">请设置萃取时间</string>
+    <string name="bean_etc_settings_4_check_notice">校对</string>
+    <string name="bean_etc_settings_4_press_notice">请点击产品按钮</string>
+    <string name="bean_etc_settings_4_auto_adjust">自动调整模式</string>
+    <string name="bean_etc_settings_4_adjust_thickness">调整粗细度: </string>
     <string name="machine_test_coffee_inputs">咖啡输入测试</string>
     <string name="machine_test_coffee_output">咖啡输出测试</string>
     <string name="machine_test_steam_inputs">蒸汽输入状态</string>
@@ -621,5 +625,6 @@
     <string name="bean_etc_settings_1_rinse_rate">冲水流量</string>
     <string name="bean_etc_settings_1_notice">如果您更换了部件或维护了机器，建议后动润湿流速以测量系统和限流孔的流速。</string>
     <string name="home_check_container_title">清理废渣盒</string>
+    <string name="bean_etc_settings_4_blade_grinder_capacity">刀盘研磨容量: </string>
 
 </resources>
