--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -377,6 +377,28 @@
     <string name="config_steam_wand_both">Both</string>
     <string name="config_steam_wand_left">Left</string>
     <string name="config_steam_wand_right">Right</string>
+    <string name="config_milk_setting">Milk System Setting</string>
+    <string name="config_milk_tank_detect_method">Milk Tank Detection Method</string>
+    <string name="config_milk_tank_detect_milk_flow">Milk Flow Detect(Recommend)</string>
+    <string name="config_milk_tank_detect_milk_flow_sensor">Milk Flow Sensor</string>
+    <string name="config_milk_tank_detect_temp_detect">Temperature Detect(Emergency Only)</string>
+    <string name="config_milk_tank_detect">Milk Tank Detect</string>
+    <string name="config_milk_tank_detect_close">Close</string>
+    <string name="config_milk_tank_temperature">Temperature</string>
+    <string name="config_milk_tank_refrigerator">Refrigerator</string>
+    <string name="config_milk_tank_both">Temperature&amp;Refrigerator</string>
+    <string name="config_milk_valve">Milk Valve</string>
+    <string name="config_milk_valve_exist">Exist</string>
+    <string name="config_milk_valve_not_exist">Not Exist</string>
+    <string name="config_milk_outlet">Milk Outlet</string>
+    <string name="config_milk_outlet_coffee">Coffee Outlet</string>
+    <string name="config_milk_outlet_milk_stick">Milk Stick Outlet</string>
+    <string name="config_milk_foam_temp_warning">Foam Temperature Warning</string>
+    <string name="config_milk_temp_detect">Milk Temp Detect</string>
+    <string name="config_milk_setting_mode">Milk Setting Mode</string>
+    <string name="config_milk_setting_mode_standard">Standard</string>
+    <string name="config_milk_setting_mode_extend">Extend</string>
+    <string name="config_milk_setting_steam_pressure">Steam Boiler Pressure</string>
 
     <string name="params_coffee_boiler_temp">Coffee Boiler Temperature</string>
     <string name="params_cold_rinse_quantity">Cold Rinse Quantity</string>
