--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -355,6 +355,8 @@
     <string name="config_milk_flush_right">奶管反推冲洗量 右边</string>
     <string name="config_milk_flush_warning">必须调整反冲洗量，以便在 “检查反冲洗量” 操作期间，牛奶几乎能完全从奶管中被推挤出来！</string>
     <string name="config_milk_confirm_cleaned">牛奶系统已经清洗过了</string>
+    <string name="config_milk_add_milk">请补充牛奶</string>
+    <string name="config_milk_add_milk_notice">奶缸牛奶温度需要跟实际操作时一样</string>
     <string name="params_coffee_boiler_temp">咖啡锅炉温度</string>
     <string name="params_cold_rinse_quantity">冷水冲水量</string>
     <string name="params_warm_rinse_quantity">热水冲水量</string>
